# typ2docx

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  ExportToWord.js  LICENSE  README.md  acrobat.applescript  acrobat.py  biome.json  build.sh  convert.py  export.js  extract.rs  include.typ  index.html  inject.py  justfile  main.py  main.typ  marker.typ  merge.ps1  merge.sh  merge.xslt  package.json  pdf_js_injector.py  pdfservices.py  preamble.typ  pyproject.toml  saxon.py  server.js  server.ts  typ2docx.js  utils.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  pypi.yml  release.yml
src/: lib.rs  main.rs
tests/dir/: main.typ
