[project]
name = "typ2docx"
version = "0.3.0"
dependencies = ["pdfservices-sdk>=4.0", "rich", "typer"]
requires-python = ">=3.10"
authors = [{ name = "Samuel Huang", email = "hi@sgh.ng" }]
description = "A tool to convert Typst project to Microsoft Word format."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["Typst", "docx", "converter", "Microsoft Word"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Other Scripting Engines",
  "Programming Language :: Rust",
  "Programming Language :: Unix Shell",
  "Topic :: File Formats",
  "Topic :: Text Processing :: Markup",
  "Topic :: Text Editors :: Word Processors",
]

[project.urls]
Repository = "https://github.com/sghng/typ2docx"
Issues = "https://github.com/sghng/typ2docx/issues"

[project.scripts]
typ2docx = "main:app"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
include = [
  "acrobat.applescript",
  "main.py",
  "merge.sh",
  "merge.xslt",
  "pdfservices.py",
  "preamble.typ",
  "utils.py",
]

[tool.ruff.lint.isort]
known-first-party = ["extract"]
