[project]
name = "typ2docx"
version = "0.7.0"
dependencies = [
  "click>=8.3",
  "pdf2docx",
  "pdfservices-sdk>=4",
  "pypdf",
  "rich",
  "saxonche",
  "typer>=0.19",
]
requires-python = ">=3.11"
authors = [{ name = "Samuel Huang", email = "hi@sgh.ng" }]
description = "A tool to convert Typst project to Microsoft Word format."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["Typst", "docx", "converter", "Microsoft Word"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: JavaScript",
  "Programming Language :: Other Scripting Engines",
  "Programming Language :: Rust",
  "Programming Language :: Unix Shell",
  "Topic :: File Formats",
  "Topic :: Text Processing :: Markup",
  "Topic :: Text Editors :: Word Processors",
]

[project.optional-dependencies]
dev = ["saxonche-stubs"]

[project.urls]
Homepage = "https://typ2docx.sgh.ng"
Repository = "https://github.com/sghng/typ2docx"
Issues = "https://github.com/sghng/typ2docx/issues"

[project.scripts]
typ2docx = "main:app"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
include = [
  "convert.py",
  "export.js",
  "main.py",
  "merge.ps1",
  "merge.sh",
  "merge.xslt",
  "pdfservices.py",
  "preamble.typ",
  "saxon.py",
  "typ2docx.js",
  "utils.py",
]

[tool.ruff.lint.isort]
known-first-party = ["extract"]
